# llm_mkt_sim

./: .gitignore  README.md  pyproject.toml
agents/: __init__.py  base.py  baseline.py  llm_agent.py  llm_backends.py
benchmarks/: __init__.py  scenarios.py
eval/: __init__.py  metrics.py  plots.py
exchange/: __init__.py  order_book.py
orchestration/: __init__.py  simulator.py
scripts/: __init__.py  run_experiment.py
signals/: __init__.py  path.py
tests/: test_order_book.py  test_simulator_smoke.py
